[package]
name = "devnetctl"
version = "0.1.0"
edition = "2024"


[[bin]]
name = "devnetctl"
path = "devnetctl/src/main.rs"


[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
[dependencies]
cfx-types = { git = "https://github.com/Conflux-Chain/conflux-rust", rev = "1d2ab753f091e572bf7103007e585e7b700c8255" }
cfxcore = { git = "https://github.com/Conflux-Chain/conflux-rust", rev = "1d2ab753f091e572bf7103007e585e7b700c8255" }
cfxkey = { git = "https://github.com/Conflux-Chain/conflux-rust", rev = "1d2ab753f091e572bf7103007e585e7b700c8255" }
diem-crypto = { git = "https://github.com/Conflux-Chain/conflux-rust", rev = "1d2ab753f091e572bf7103007e585e7b700c8255" }
diem-types = { git = "https://github.com/Conflux-Chain/conflux-rust", rev = "1d2ab753f091e572bf7103007e585e7b700c8255" }
executor = { git = "https://github.com/Conflux-Chain/conflux-rust", rev = "1d2ab753f091e572bf7103007e585e7b700c8255" }
pos-ledger-db = { git = "https://github.com/Conflux-Chain/conflux-rust", rev = "1d2ab753f091e572bf7103007e585e7b700c8255" }
storage-interface = { git = "https://github.com/Conflux-Chain/conflux-rust", rev = "1d2ab753f091e572bf7103007e585e7b700c8255" }

rand = "0.8"
rustc-hex = "2.1"

clap = { version = "4", features = ["derive"] }
tempfile = "3"
bcs = "0.1"
env_logger = "0.11"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"